# Fusor

./: .flake8  .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: build.yml  lint.yml  tests.yml
fusor/: __init__.py  __main__.py  about_dialog.py  branch_dialog.py  config.py  icons.py  main_window.py  qtextedit_logger.py  ui.py  utils.py  welcome_dialog.py
fusor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
fusor/tabs/: __init__.py  about_tab.py  composer_tab.py  database_tab.py  docker_tab.py  env_tab.py  framework_tab.py  git_tab.py  laravel_tab.py  logs_tab.py  makefile_tab.py  node_tab.py  project_tab.py  settings_tab.py  symfony_tab.py  terminal_tab.py  yii_tab.py
tests/: conftest.py  test_composer_tab.py  test_config.py  test_database_tab.py  test_docker_tab.py  test_env_tab.py  test_framework_tab.py  test_git_tab.py  test_laravel_tab.py  test_logs_tab.py  test_main_window.py  test_makefile_tab.py  test_node_tab.py  test_project_tab.py  test_settings_clone.py  test_settings_tab.py  test_symfony_tab.py  test_terminal_tab.py  test_utils.py  test_welcome_dialog.py  test_yii_tab.py
