[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fusor"
version = "0.1.0"
description = "A minimal PyQt6 application with helper tools for PHP development."
authors = [{name = "Fusor Dev"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6~=6.9",
    "pyttsx3"
]

[project.scripts]
fusor = "fusor.__main__:main"
